--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+        <activity android:name=".WineDetailsActivity" android:exported="false" />
     </application>
 
 </manifest>
